--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +28,8 @@
     "eslint-config-next": "15.3.3",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
